src/lexical_analysis/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_special_characters_case1.snap
---
source: src/lexical_analysis/tests.rs
expression: returned_tokens
---
[
  "NOT",
  "MULTIPLY",
  "ASSIGN",
  "EOF"
]
