src/lexical_analysis/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_special_characters_case3.snap
---
source: src/lexical_analysis/tests.rs
expression: returned_token_order
---
[
  {
    "token_type": "GREATER_THAN",
    "literal": ">"
  },
  {
    "token_type": "LESSER_THAN",
    "literal": "<"
  },
  {
    "token_type": "MULTIPLY",
    "literal": "*"
  },
  {
    "token_type": "EOF",
    "literal": ""
  }
]
