src/lexical_analysis/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_special_characters_case4.snap
---
source: src/lexical_analysis/tests.rs
expression: returned_tokens
---
[
  "ASSIGN",
  "PLUS",
  "OPENING_ROUND_BRACKET",
  "CLOSING_ROUND_BRACKET",
  "OPENING_CURLY_BRACKET",
  "CLOSING_CURLY_BRACKET",
  "COMMA",
  "SEMI_COLON",
  "EOF"
]
