src/lexical_analysis/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_special_multi_characters_case2.snap
---
source: src/lexical_analysis/tests.rs
expression: returned_token_order
---
[
  {
    "token_type": "NOT_EQUALS",
    "literal": "!="
  },
  {
    "token_type": "INTEGER",
    "literal": "4"
  },
  {
    "token_type": "EOF",
    "literal": ""
  }
]
